<resources>
    <string name="app_name">GlumciRecycleView19</string>
    <string name="Notification_Title">Notification</string>
    <string name="Notification_Text">This is notification text</string>
    <string name="Notification_settings_show">Show notifications</string>
    <string name="Notification_settings">Notifications</string>


    <string name="activity_main_name">Main Activity</string>
    <string name="activity_main_toolbar_title">Toolbar Title</string>

    <string name="activity_settings_name">Settings Activity</string>

    <string name="fragment_detail_buy">Buy</string>
    <string name="fragment_detal_action_refresh">Refresh</string>
    <string name="fragment_detal_action_add">Add</string>

    <string name="dialog_about_title">About</string>
    <string name="dialog_about_message">Kisker</string>
    <string name="dialog_about_yes">OK</string>
    <string name="dialog_about_no">Cancel</string>

    <string name="pref_sync">pref_sync</string>
    <string name="pref_sync1">pref_sync1</string>
    <string name="pref_sync_title">Allow Sync</string>
    <string name="pref_sync_summ">Allow app to sync data automatically if Wi-fi is available</string>
    <string name="pref_syncConnectionType">Sync interval</string>
    <string name="pref_sync_list">pref_sync_list</string>
    <string name="pref_sync_list1">pref_sync_list1</string>

    <string name="drawer_open">Open Navigation Drawer</string>
    <string name="drawer_close">Close Navigation Drawer</string>
    <string name="drawer_home">Home</string>
    <string name="drawer_home_long">Show All Products</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_Settings_long">Change App Settings</string>
    <string name="drawer_about">About</string>
    <string name="drawer_about_long">About Us</string>

    <string name="autosync_problem">Automatic Sync problem</string>
    <string name="no_internet">Bad news, no internet connection</string>
    <string name="autosync_warning">Automatic Sync warning</string>
    <string name="connect_to_wifi">Please connect to wifi to sync data</string>
    <string name="autosync">Automatic Sync</string>
    <string name="good_news_sync">Good news, everything is sync now.</string>
    <string name="allow_message">allow_message</string>
    <string name="allow_message_summary">Show messages in stats bar when they arive</string>
    <string name="allow_message_title">Allow showing messages</string>
</resources>